# cairo

./: .gitlab-ci.yml  INSTALL  NEWS  configure.ac  meson.build  meson_options.txt
.gitlab-ci/: ignore-ps2-argb32.txt  ignore-ps3-argb32.txt  ignore-ps3-rgb24.txt  ignore-quartz-argb32.txt  ignore-quartz-rgb24.txt  ignore-svg11-argb32.txt  ignore-svg11-rgb24.txt
boilerplate/: cairo-boilerplate-quartz.c
src/: Makefile.sources  cairo-analysis-surface.c  cairo-array.c  cairo-atomic-private.h  cairo-cache.c  cairo-cff-subset.c  cairo-clip-tor-scan-converter.c  cairo-colr-glyph-render.c  cairo-debug.c  cairo-dwrite.h  cairo-font-options.c  cairo-ft-font.c  cairo-ft-private.h  cairo-gl-glyphs.c  cairo-gl-surface.c  cairo-gstate.c  cairo-hash.c  cairo-image-compositor.c  cairo-image-info.c  cairo-image-source.c  cairo-image-surface.c  cairo-list-inline.h  cairo-lzw.c  cairo-malloc-private.h  cairo-matrix.c  cairo-mempool.c  cairo-misc.c  cairo-paginated-surface.c  cairo-pattern-private.h  cairo-pattern.c  cairo-pdf-interchange.c  cairo-pdf-surface-private.h  cairo-pdf-surface.c  cairo-png.c  cairo-ps-surface.c  cairo-quartz-font.c  cairo-quartz-image-surface.c  cairo-quartz-private.h  cairo-quartz-surface.c  cairo-raster-source-pattern.c  (+30 more)
test/: Makefile.am  Makefile.sources  README  any2ppm.c  cairo-svg-test-palette.ttx  cairo-test-runner.c  cairo-test-trace.c  cairo-test.c  cairo-test.h  coverage.c  dithergradient.c  ft-svg-render-palette.c  gradient-scale-crash.c  leaks.c  map-to-image.c  meson.build  pdf-structure.c  pdf-tagged-text.c  png.c  (+1 more)
test/svg/fuzzer/: meson.build
(+20 files in other folders)
